my-app/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis  # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: redis
          image: redis:7.0-alpine
          # command: [ "/bin/bash", "-c", "--" ]
          # args: [ "trap : TERM INT; sleep infinity & wait" ]
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: 512Mi
